--- a/misc/translator/po/fi-FI-messages.po
+++ b/misc/translator/po/fi-FI-messages.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Koha 21.05\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-05-31 09:29+0300\n"
-"PO-Revision-Date: 2021-11-25 11:44+0000\n"
+"PO-Revision-Date: 2022-06-02 11:27+0300\n"
 "Last-Translator: Lari Taskula <lari.taskula@hypernova.fi>\n"
 "Language-Team: none\n"
 "Language: fi\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Pootle 2.8\n"
+"X-Generator: Poedit 2.4.1\n"
 "X-POOTLE-MTIME: 1637840641.054286\n"
 "X-Pootle-Path: /fi/21.05/fi-FI-messages.po\n"
 "X-Pootle-Revision: 1\n"
@@ -71,7 +71,7 @@ msgstr "Luotu"
 #: koha-tmpl/intranet-tmpl/prog/en/modules/acqui/transferorder.tt:44
 msgctxt "basket created by"
 msgid "Created by"
-msgstr "Luoja: "
+msgstr "Luoja:"
 
 #: koha-tmpl/intranet-tmpl/prog/en/modules/acqui/basket.tt:245
 msgctxt "basket created by"
